--- a/.github/workflows/publish_foss_docker.yml
+++ b/.github/workflows/publish_foss_docker.yml
@@ -32,23 +32,23 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
 
-      - name: Strip enterprise code
-        run: |
-          rm -rf enterprise
-          rm -rf spec/enterprise
+      # - name: Strip enterprise code
+      #   run: |
+      #     rm -rf enterprise
+      #     rm -rf spec/enterprise
 
-      - name: Set Chatwoot edition
-        run: |
-          echo -en '\nENV CW_EDITION="ce"' >> docker/Dockerfile
+      # - name: Set Chatwoot edition
+      #   run: |
+      #     echo -en '\nENV CW_EDITION="ce"' >> docker/Dockerfile
 
       - name: set docker tag
         run: |
-          echo "DOCKER_TAG=${{ env.REGISTRY }}/clairton/chatwoot:$GIT_REF-ce" >> $GITHUB_ENV
+          echo "DOCKER_TAG=${{ env.REGISTRY }}/clairton/chatwoot:$GIT_REF" >> $GITHUB_ENV
 
       - name: replace docker tag if master
         if: github.ref_name == 'master'
         run: |
-          echo "DOCKER_TAG=${{ env.REGISTRY }}/clairton/chatwoot:latest-ce" >> $GITHUB_ENV
+          echo "DOCKER_TAG=${{ env.REGISTRY }}/clairton/chatwoot:latest" >> $GITHUB_ENV
 
       - name: Login to DockerHub
         uses: docker/login-action@v1
