--- a/.github/workflows/publish_foss_docker.yml
+++ b/.github/workflows/publish_foss_docker.yml
@@ -14,9 +14,6 @@ on:
       - v*
   workflow_dispatch:
 
-env:
-  REGISTRY: ghcr.io
-
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -43,17 +40,16 @@ jobs:
 
       - name: set docker tag
         run: |
-          echo "DOCKER_TAG=${{ env.REGISTRY }}/clairton/chatwoot:$GIT_REF" >> $GITHUB_ENV
+          echo "DOCKER_TAG=clairton/chatwoot:$GIT_REF" >> $GITHUB_ENV
 
       - name: replace docker tag if master
         if: github.ref_name == 'master'
         run: |
-          echo "DOCKER_TAG=${{ env.REGISTRY }}/clairton/chatwoot:latest" >> $GITHUB_ENV
+          echo "DOCKER_TAG=clairton/chatwoot:latest" >> $GITHUB_ENV
 
       - name: Login to DockerHub
         uses: docker/login-action@v1
         with:
-          registry: ${{ env.REGISTRY }}
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
