feat: configure send agent name on whatsapp message

--- a/config/features.yml
+++ b/config/features.yml
@@ -87,3 +87,5 @@
   enabled: false
 - name: hide_all_chats_for_agent
   enabled: false
+- name: send_agent_name_in_whatsapp_message
+  enabled: true
