feature hide contacts for agent

--- a/config/features.yml
+++ b/config/features.yml
@@ -94,5 +94,7 @@
   premium: true
 - name: hide_all_chats_for_agent
   enabled: false
+- name: hide_contacts_for_agent
+  enabled: false
 - name: send_agent_name_in_whatsapp_message
   enabled: true
