feature hide filters for agent

--- a/config/features.yml
+++ b/config/features.yml
@@ -96,5 +96,7 @@
   enabled: false
 - name: hide_contacts_for_agent
   enabled: false
+- name: hide_filters_for_agent
+  enabled: false
 - name: send_agent_name_in_whatsapp_message
   enabled: true
