--- a/config/features.yml
+++ b/config/features.yml
@@ -101,3 +101,5 @@
   enabled: true
 - name: disable_whatsapp_messaging_window
   enabled: false
+- name: agent_conversation_viewed
+  enabled: true
