add feature agent viewed

--- a/config/features.yml
+++ b/config/features.yml
@@ -104,3 +104,5 @@
   enabled: true
 - name: disable_whatsapp_messaging_window
   enabled: false
+- name: agent_conversation_viewed
+  enabled: true
