--- a/.github/workflows/publish_foss_docker.yml
+++ b/.github/workflows/publish_foss_docker.yml
@@ -41,7 +41,7 @@ jobs:
       - name: set docker tag
         run: |
           echo "DOCKER_TAG=clairton/chatwoot:$GIT_REF" >> $GITHUB_ENV
-          echo "DOCKER_ARM_TAG=clairton/chatwoot-arm:$GIT_REF" >> $GITHUB_ENV
+          echo "DOCKER_ARM_TAG=clairton/chatwoot:$GIT_REF-arm" >> $GITHUB_ENV
 
       - name: replace docker tag if master
         if: github.ref_name == 'master'
