fix: downcase email before finding (#8921)
* fix: downcase email when finding

* feat: add `from_email` class

* refactor: use `from_email`

* feat: add rule to disallow find_by email directly

* chore:  remove redundant test

Since the previous imlpmentation didn't do a case-insentive search, a new user would be created, and the error would be raised at the DB layer. With the new changes, this test case is redundant

* refactor: use from_email

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -2,6 +2,7 @@ require:
   - rubocop-performance
   - rubocop-rails
   - rubocop-rspec
+  - ./lib/rubocop/user_find_by.rb
 
 Layout/LineLength:
   Max: 150
@@ -139,6 +140,10 @@ RSpec/MultipleExpectations:
   Max: 7
 RSpec/MultipleMemoizedHelpers:
   Max: 14
+
+# custom rules
+UseFromEmail:
+  Enabled: true
 
 AllCops:
   NewCops: enable
