--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "idb": "^7.1.1",
     "ionicons": "~2.0.1",
     "js-cookie": "^3.0.5",
+    "lamejs": "1.2.0",
     "libphonenumber-js": "^1.10.24",
     "markdown-it": "^13.0.2",
     "markdown-it-link-attributes": "^4.0.1",
