feat: conversation style css

--- a/config/installation_config.yml
+++ b/config/installation_config.yml
@@ -233,3 +233,10 @@
   display_title: 'Captain App URL'
   description: 'The App URL for Captain'
 ## ----- End of Captain Configs ----- ##
+
+## ------ Configs custom ------ ##
+- name: CONVERSATION_STYLE_CSS
+  display_title: 'Conversation Style CSS'
+  value:
+  description: 'Customize conversation, put your valid css'
+## ------ End of Configs custom ------ ##
