--- a/config/installation_config.yml
+++ b/config/installation_config.yml
@@ -189,3 +189,10 @@
   locked: false
   description: 'Disable rendering profile update page for users'
 ## ------ End of Configs added for enterprise clients ------ ##
+
+## ------ Configs custom ------ ##
+- name: CONVESATION_STYLE_CSS
+  display_title: 'Conversation Style CSS'
+  value:
+  description: 'Customize conversation, put your valid css'
+## ------ End of Configs custom ------ ##
