--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "mitt": "^3.0.1",
     "opus-recorder": "^8.0.5",
     "semver": "7.6.3",
+    "socket.io-client": "^4.7.5",
     "timezone-phone-codes": "^0.0.2",
     "tinykeys": "^3.0.0",
     "turbolinks": "^5.2.0",
@@ -132,7 +133,7 @@
     "vitest": "2.0.1"
   },
   "engines": {
-    "node": "20.x",
+    "node": ">= 20.x",
     "pnpm": "9.x"
   },
   "husky": {
