--- a/.github/workflows/publish_foss_docker.yml
+++ b/.github/workflows/publish_foss_docker.yml
@@ -27,7 +27,7 @@ jobs:
         uses: docker/setup-qemu-action@v1
 
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
+        uses: docker/setup-buildx-action@v3
 
       # - name: Strip enterprise code
       #   run: |
@@ -55,14 +55,17 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
+      # https://github.com/docker/buildx/discussions/1382 cache build
       - name: Build and push
-        uses: docker/build-push-action@v2
+        uses: docker/build-push-action@v5
         with:
           context: .
           file: docker/Dockerfile
           platforms: linux/amd64
           push: true
           tags: ${{ env.DOCKER_TAG }}
+          cache-from: type=registry,ref=image:buildcache-amd64 
+          cache-to: type=registry,ref=image:buildcache-amd64
 
       - name: Build and push arm64
         uses: docker/build-push-action@v2
@@ -72,3 +75,5 @@ jobs:
           platforms: linux/arm64
           push: true
           tags: ${{ env.DOCKER_ARM_TAG }}
+          cache-from: type=registry,ref=image:buildcache-arm64
+          cache-to: type=registry,ref=image:buildcache-arm64
