add: unoapi configuration in super admin

--- a/config/installation_config.yml
+++ b/config/installation_config.yml
@@ -240,3 +240,10 @@
   value:
   description: 'Customize conversation, put your valid css'
 ## ------ End of Configs custom ------ ##
+
+# MARK: UNOAPI Channel Config
+- name: UNOAPI_AUTH_TOKEN
+  value:
+  display_title: 'UNO API Auth Token'
+  description: 'The Auth Token for UNO API. Find more details on how to configure UNOAPI here: https://github.com/clairton/unoapi-cloud/tree/main'
+# End of UNOAPI Channel Config
